Removed needless gamedata passing, and added methods to get game data out of bridge. (frigoref)
git-svn-id: https://svn.code.sf.net/p/triplea/code/trunk/triplea@3235 a4c711aa-641f-0410-879d-9b464e52b682